--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,58 @@
-.menu{
-    display: flex;
-    flex-direction: row;
-    background-color: beige;
-    max-width: min-content;
+body{
 
-}
-
-*{
-
-background-color: bisque;
+    background-image: url(../images/Noctua-bakrund.png);
 
 }
 
 
 div{
-    border: dotted;
+    padding-left: 5px;
+    padding-right: 5px;
     max-width: max-content;
-    background-color: beige;
+    background-color: rgba(245, 245, 220, 0.493);
     
 }
 
-h2{
-    background-color: beige;
+p{
+   
     max-height: 35px;
 }
 
-.menu{
 
+
+
+
+
+
+
+.menu{
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(0, 0, 0);
+    max-width: min-content;
+    max-height: min-content;
+    border: solid;
+    
+    display: none;
+
+background-color: rgba(124, 41, 2, 0.685);
+
+
+}
+
+
+.main{
+  
+    margin-left: 20px;
+    margin-right: 20px;
+background-color: bisque;
+
+    padding-bottom: 100%;
+}
+
+@media screen and (min-width:600px) {
+    .main{
+    margin-left: 200px;
+    margin-right: 20px;
+    }
 }
