--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-body {
-  background-color:navajowhite ;
-}
+
 
 div {
   padding-left: 5px;
@@ -85,6 +83,7 @@ border-style: groove;
   padding-bottom: 50px;
   margin-bottom: 20px;
   grid-template: "bild1 bes nyhetfläkt"
+  "pris pris pris"
   ;
  
 }
@@ -95,16 +94,26 @@ border-style: groove;
   max-height: fit-content;
   font-weight: bold;
   border-radius: 5px;
-  margin-left: 100px;
-  padding-right: 15px;
+  margin-left: 143px;
+  
 }
 .rea p{
   grid-area: nyhetfläkt;
+  font-weight: bold;
+ display: flex;
+ flex-direction: column;
+}
+
+
+.pris{
+grid-area: pris;
+  background-color: rgba(165, 42, 42, 0.733);
   max-height: fit-content;
   font-weight: bold;
   border-radius: 5px;
-  margin-left: 10px;
- 
+  margin-top: 30px;
+  
+
 }
 
 .bildbeskrivningrea{
