--- a/css/Products.css
+++ b/css/Products.css
@@ -125,7 +125,7 @@ justify-self: center;
 
 .rea{
   grid-row: 1/2;
-  grid-column: 3/4;
+  grid-column: 4/5;
   background-color: rgba(165, 42, 42, 0.733);
   max-height: fit-content;
   font-weight: bold;
@@ -143,12 +143,13 @@ justify-self: center;
 
 
 .pris{
-grid-row: 3/4;
-  grid-column: 3/4;
+grid-row: 1/2;
+  grid-column: 2/3;
   background-color: rgba(165, 42, 42, 0.733);
   max-height: fit-content;
   font-weight: bold;
   border-radius: 5px;
+  align-items: center;
   
   
 
