--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,12 @@
 .wrapper{
 
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-template-rows: auto auto auto auto auto auto auto;
 }
 div {
   padding-left: 5px;
   padding-right: 5px;
-  max-width: max-content;
 }
 
 p {
@@ -38,14 +37,14 @@ border-style: groove;
   grid-template-areas:
     "logo          "
     "textomoss";
-    grid-column: 1 / span 2;
+    grid-column: span 2;
+    
 }
 
 .om-osstext {
   grid-area: textomoss;
 }
 .om-osstext p {
-  width: 300px;
 }
 
 .noctua-logo {
@@ -68,12 +67,12 @@ border-style: groove;
 
 }
 .vd-bild{
-    max-width: 500px;
 }
 
 .reafläkt {
 
-
+grid-column: 1/ span 2;
+grid-row: 4/5;
   background-color: bisque;
   display: grid;
   border-style: groove;
@@ -126,8 +125,8 @@ grid-area: pris;
 
 
 .nya-fläkt {
-  
-
+  grid-row: 5/6;
+grid-column: 1/ span 2;
   background-color: bisque;
   display: grid;
   border-style: groove;
@@ -139,6 +138,7 @@ grid-area: pris;
   
   grid-template: "bild1 nyhetfläkt"
   "bes bes";
+
  
 }
 
@@ -146,8 +146,7 @@ grid-area: pris;
    grid-area: bes;
  
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  max-height: min-content;
-  max-width: min-content;
+  
   
 }
 
@@ -171,7 +170,6 @@ grid-area: pris;
 }
 .heltnyafläkt {
   grid-area: heltnya;
-  width: 60px;
 }
 
 @media screen and (min-width: 600px) {
