--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 
 .wrapper{
-
+ gap: 1%;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto auto auto auto auto;
@@ -11,7 +11,6 @@ div {
 }
 
 p {
-  max-height: 35px;
 }
 
 .menu {
@@ -59,15 +58,11 @@ border-style: groove;
   display: grid;
   border-style: groove;
 
-  padding-top: 20px;
-  padding-right: 200px;
-  padding-left: 10px;
-  padding-bottom: 50px;
+ 
   
 
 }
-.vd-bild{
-}
+
 
 .reafläkt {
 
@@ -77,10 +72,6 @@ grid-row: 4/5;
   display: grid;
   border-style: groove;
 
-  padding-top: 20px;
-  padding-right: 200px;
-  padding-left: 10px;
-  padding-bottom: 50px;
  
   grid-template: "bild1 bes nyhetfläkt"
   "pris pris pris"
@@ -88,13 +79,19 @@ grid-row: 4/5;
  
 }
 
+.pris p{
+width: fit-content;
+background-color: rgba(165, 42, 42, 0.733);
+  border-radius: 5px;
+
+}
+
 .rea{
   grid-area: nyhetfläkt;
-  background-color: rgba(165, 42, 42, 0.733);
-  max-height: fit-content;
+  
   font-weight: bold;
-  border-radius: 5px;
  
+
   
 }
 .rea p{
@@ -102,15 +99,16 @@ grid-row: 4/5;
   font-weight: bold;
  display: flex;
  flex-direction: column;
+ background-color: rgba(165, 42, 42, 0.733);
+  border-radius: 5px;
+  width: fit-content;
 }
 
 
 .pris{
 grid-area: pris;
-  background-color: rgba(165, 42, 42, 0.733);
-  max-height: fit-content;
+  
   font-weight: bold;
-  border-radius: 5px;
   
   
 
@@ -131,18 +129,14 @@ grid-column: 1/ span 2;
   display: grid;
   border-style: groove;
 
-  padding-top: 20px;
-  padding-right: 200px;
-  padding-left: 10px;
-  padding-bottom: 50px;
-  
+ 
   grid-template: "bild1 nyhetfläkt"
   "bes bes";
 
  
 }
 
-.bildbeskrivningnyafläkt{
+.bildbeskrivning p{
    grid-area: bes;
  
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -163,7 +157,6 @@ grid-column: 1/ span 2;
 .nyhetfläkt {
   grid-area: nyhetfläkt;
   background-color: rgba(165, 42, 42, 0.733);
-  max-height: fit-content;
   font-weight: bold;
   border-radius: 5px;
  
@@ -172,12 +165,63 @@ grid-column: 1/ span 2;
   grid-area: heltnya;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 500px) {
   .main {
-    margin-left: 200px;
-    margin-right: 20px;
-  }
+    margin-left: 200px;  }
   .menupic {
     display: none;
   }
+
+.nya-fläkt {
+  grid-row: 3/4;
+grid-column: 2/ 3;
+  background-color: bisque;
+  display: grid;
+  border-style: groove;
+
+ 
+  grid-template: "bild1 nyhetfläkt"
+  "bes bes";
+}
+
+.wrapper{
+ gap: 1%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto auto auto auto auto auto;
+}
+
+.vd {
+  
+
+  background-color: bisque;
+  display: grid;
+  border-style: groove;
+
+ 
+  grid-column: 1/3;
+  grid-row: 5/6;
+
+}
+
+
+.reafläkt {
+
+grid-column: 1/  2;
+grid-row: 3/4;
+  background-color: bisque;
+  display: grid;
+  border-style: groove;
+
+ 
+  grid-template: "bild1 bes nyhetfläkt"
+  "pris pris pris"
+  ;
+ 
+}
+
+
+
+
+
 }
