--- a/css/Reviews.css
+++ b/css/Reviews.css
@@ -10,6 +10,7 @@ background-color: bisque;
 display: grid;
 grid-template-columns: 1fr 1fr;
 grid-template-rows: auto  auto ;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
 }
 
