--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ p {
 }
 
 .om-oss {
- 
+ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
   padding-top: 10px;
   padding-bottom: 50px;
 border-style: groove;
@@ -58,7 +58,7 @@ border-style: groove;
   display: grid;
   border-style: groove;
 
- 
+ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
   
 
 }
@@ -76,7 +76,8 @@ grid-row: 4/5;
   grid-template: "bild1 bes nyhetfläkt"
   "pris pris pris"
   ;
- 
+  
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
 }
 
 .pris p{
@@ -133,7 +134,7 @@ grid-column: 1/ span 2;
   grid-template: "bild1 nyhetfläkt"
   "bes bes";
 
- 
+ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
 }
 
 .bildbeskrivning p{
@@ -216,6 +217,7 @@ grid-row: 3/4;
  
   grid-template: "bild1 bes nyhetfläkt"
   "pris pris pris"
+  
   ;
  
 }
