--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ p {
 }
 
 .om-oss {
- box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
+ 
   padding-top: 10px;
   padding-bottom: 50px;
 border-style: groove;
@@ -37,6 +37,8 @@ border-style: groove;
     "logo          "
     "textomoss";
     grid-column: span 2;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
     
 }
 
@@ -59,6 +61,9 @@ border-style: groove;
   border-style: groove;
 
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
+  border-radius: 10px;
+  grid-row: 3/4;
+  grid-column: 1/ span 2;
   
 
 }
@@ -73,11 +78,14 @@ grid-row: 4/5;
   border-style: groove;
 
  
-  grid-template: "bild1 bes nyhetfläkt"
-  "pris pris pris"
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto
+  
   ;
   
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
+  border-radius: 10px;
+
 }
 
 .pris p{
@@ -88,15 +96,14 @@ background-color: rgba(165, 42, 42, 0.733);
 }
 
 .rea{
-  grid-area: nyhetfläkt;
-  
+grid-column: 3/4;
+grid-row: 1/2;  
   font-weight: bold;
  
 
   
 }
 .rea p{
-  grid-area: nyhetfläkt;
   font-weight: bold;
  display: flex;
  flex-direction: column;
@@ -107,16 +114,15 @@ background-color: rgba(165, 42, 42, 0.733);
 
 
 .pris{
-grid-area: pris;
   
   font-weight: bold;
-  
+grid-column: 2/3;
+grid-row:1/2;  
   
 
 }
 
 .bildbeskrivningrea{
-   grid-area: bes;
 
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   
@@ -133,6 +139,7 @@ grid-column: 1/ span 2;
  
   grid-template: "bild1 nyhetfläkt"
   "bes bes";
+  border-radius: 10px;
 
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
 }
@@ -152,7 +159,9 @@ grid-column: 1/ span 2;
 }
 
 .bild1 {
-  grid-area: bild1;
+ grid-column: 1/2;
+  border-radius: 10px;
+
 }
 
 .nyhetfläkt {
@@ -165,6 +174,7 @@ grid-column: 1/ span 2;
 .heltnyafläkt {
   grid-area: heltnya;
 }
+
 
 @media screen and (min-width: 500px) {
   .main {
@@ -214,15 +224,19 @@ grid-row: 3/4;
   display: grid;
   border-style: groove;
 
- 
-  grid-template: "bild1 bes nyhetfläkt"
-  "pris pris pris"
+ grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto
   
   ;
+
+ 
  
 }
 
+.beskrivning{
 
+  
+}
 
 
 
