--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
-
-.wrapper{
- gap: 1%;
+.wrapper {
+  gap: 1%;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto auto auto auto auto;
@@ -26,217 +25,192 @@ p {
 }
 
 .om-oss {
- 
   padding-top: 10px;
   padding-bottom: 50px;
-border-style: groove;
-  
+  border-style: groove;
+
   background-color: bisque;
   display: grid;
   grid-template-areas:
     "logo          "
     "textomoss";
-    grid-column: span 2;
+  grid-column: span 2;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
-    
 }
 
-.om-osstext {
-  grid-area: textomoss;
-}
-.om-osstext p {
-}
-
-.noctua-logo {
-  grid-area: logo;
-}
 
 
 .vd {
-  
-
   background-color: bisque;
   display: grid;
   border-style: groove;
 
- box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
-  border-radius: 10px;
-  grid-row: 3/4;
-  grid-column: 1/ span 2;
-  
-
-}
-
-
-.reafläkt {
-
-grid-column: 1/ span 2;
-grid-row: 4/5;
-  background-color: bisque;
-  display: grid;
-  border-style: groove;
-
- 
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto auto auto
-  
-  ;
-  
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
   border-radius: 10px;
-
+  grid-row: 3/4;
+  grid-column: 1 / span 2;
 }
 
-.pris p{
-width: fit-content;
-background-color: rgba(165, 42, 42, 0.733);
+.reafläkt {
+  grid-column: 1 / span 2;
+  grid-row: 4/5;
+  background-color: bisque;
+  display: grid;
+  border-style: groove;
+
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto;
+
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
+  border-radius: 10px;
+}
+
+.pris p {
+  width: fit-content;
+  background-color: rgba(165, 42, 42, 0.733);
   border-radius: 5px;
-
 }
 
-.rea{
-grid-column: 3/4;
-grid-row: 1/2;  
+.rea {
+  grid-column: 3/4;
+  grid-row: 1/2;
   font-weight: bold;
- 
-
-  
 }
-.rea p{
+.rea p {
   font-weight: bold;
- display: flex;
- flex-direction: column;
- background-color: rgba(165, 42, 42, 0.733);
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(165, 42, 42, 0.733);
   border-radius: 5px;
   width: fit-content;
 }
 
-
-.pris{
-  
+.pris {
   font-weight: bold;
-grid-column: 2/3;
-grid-row:1/2;  
-  
-
+  grid-column: 2/3;
+  grid-row: 1/2;
 }
 
-.bildbeskrivningrea{
-
+.bildbeskrivningrea {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  
 }
-
 
 .nya-fläkt {
   grid-row: 5/6;
-grid-column: 1/ span 2;
+  grid-column: 1 / span 2;
   background-color: bisque;
   display: grid;
   border-style: groove;
 
- 
-  grid-template: "bild1 nyhetfläkt"
-  "bes bes";
+  grid-template:
+    "bild1 nyhetfläkt"
+    "bes bes";
   border-radius: 10px;
 
- box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
 }
 
-.bildbeskrivning p{
-   grid-area: bes;
- 
+.bildbeskrivning p {
+  
+
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  
-  
 }
 
-.bildbeskrivning {
-  grid-area: bes;
-  
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
+
 
 .bild1 {
- grid-column: 1/2;
+  grid-column: 1/2;
   border-radius: 10px;
-
 }
 
 .nyhetfläkt {
-  grid-area: nyhetfläkt;
+  
   background-color: rgba(165, 42, 42, 0.733);
   font-weight: bold;
   border-radius: 5px;
- 
 }
 .heltnyafläkt {
-  grid-area: heltnya;
+ 
 }
-
 
 @media screen and (min-width: 500px) {
   .main {
-    margin-left: 200px;  }
+    margin-left: 200px;
+  }
   .menupic {
     display: none;
   }
 
-.nya-fläkt {
-  grid-row: 3/4;
-grid-column: 2/ 3;
-  background-color: bisque;
+  .nya-fläkt {
+    grid-row: 3/4;
+    grid-column: 2/ 3;
+    background-color: bisque;
+    display: grid;
+    border-style: groove;
+
+    grid-template:
+      "bild1 nyhetfläkt"
+      "bes bes";
+  }
+
+  .wrapper {
+    gap: 1%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto auto auto auto auto;
+  }
+
+  .vd {
+    background-color: bisque;
+    display: grid;
+    border-style: groove;
+
+    grid-column: 1/3;
+    grid-row: 5/6;
+  }
+
+  .reafläkt {
+    grid-column: 1/ 2;
+    grid-row: 3/4;
+    background-color: bisque;
+    display: grid;
+    border-style: groove;
+
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
+
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
+  }
+
+.header{
+
   display: grid;
-  border-style: groove;
-
- 
-  grid-template: "bild1 nyhetfläkt"
-  "bes bes";
-}
-
-.wrapper{
- gap: 1%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto auto auto auto auto auto;
-}
-
-.vd {
-  
-
-  background-color: bisque;
-  display: grid;
-  border-style: groove;
-
- 
-  grid-column: 1/3;
-  grid-row: 5/6;
-
-}
-
-
-.reafläkt {
-
-grid-column: 1/  2;
-grid-row: 3/4;
-  background-color: bisque;
-  display: grid;
-  border-style: groove;
-
- grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto auto auto
-  
-  ;
-
- 
- 
-}
-
-.beskrivning{
-
+  grid-column: 1/2;
   
 }
+
+.menu{
+
+display: flex;
+
+justify-content: flex-end;
+
+
+}
+
+.menu-div{
+  display: grid;
+ 
+  grid-row: 1/2;
+    grid-column: span 3;
+    justify-content: center;
+    background-color: gray;
+    font-size: larger;
+    font-display: block;
+}
+
 
 
 
