--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ p {
   border-style: groove;
 
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: 2fr 1fr auto;
 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
   border-radius: 10px;
@@ -94,6 +94,8 @@ p {
 
 .bildbeskrivningrea {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  grid-row:1/2 ;
+  grid-column: 2/3;
 }
 
 .nya-fläkt {
@@ -110,6 +112,12 @@ p {
 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
 }
+
+.beskrivning{
+grid-row: 2/3;
+  grid-column: 1/ span 3;
+}
+
 
 .bildbeskrivning p {
   
@@ -143,8 +151,8 @@ p {
   }
 
   .nya-fläkt {
-    grid-row: 3/4;
-    grid-column: 2/ 3;
+    grid-row: 4/5;
+    grid-column: 3/ 4;
     background-color: bisque;
     display: grid;
     border-style: groove;
@@ -166,13 +174,19 @@ p {
     display: grid;
     border-style: groove;
 
-    grid-column: 1/3;
-    grid-row: 5/6;
+    grid-column: 1/ span 4;
+    grid-row: 3/4;
   }
+
+.om-oss{
+
+grid-column: 1/ span 4;
+  grid-row: 2/3;
+}
 
   .reafläkt {
     grid-column: 1/ 2;
-    grid-row: 3/4;
+    grid-row: 4/5;
     background-color: bisque;
     display: grid;
     border-style: groove;
@@ -213,5 +227,14 @@ justify-content: flex-end;
 
 
 
+
+}
+
+@media screen and (min-width: 800px){
+
+.om-oss{
+
+  grid-column: 1/2;
+}
 
 }
