--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,21 @@
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto auto auto auto auto;
 }
+
+
+
+.reafläkt,
+.flakt1 {
+  height: 100%;
+  width: 100%;
+}
+
 div {
   padding-left: 5px;
   padding-right: 5px;
 }
 
-p {
-}
+
 
 .menu {
   padding: 0;
@@ -32,7 +40,7 @@ p {
   background-color: bisque;
   display: grid;
   grid-template-areas:
-    "logo          "
+    "logo"
     "textomoss";
   grid-column: span 2;
   border-radius: 10px;
@@ -111,6 +119,7 @@ p {
   border-radius: 10px;
 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
+  height: 100%;
 }
 
 .beskrivning{
@@ -138,9 +147,94 @@ grid-row: 2/3;
   font-weight: bold;
   border-radius: 5px;
 }
-.heltnyafläkt {
+
+.flakt1 {
+  border-radius: 10px;
+
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: bisque;
+  display: grid;
+  border-style: groove;
+font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  
+  
+ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
+ 
+  grid-template-columns:  1fr 1fr 1fr 1fr;
+  grid-template-rows: auto auto;
+
+column-gap: 5%;
+margin-bottom: 5%;
+
 }
+  .stat{
+
+  background-color: rgba(165, 42, 42, 0.384);
+border-style: double;
+
+font-size: large;
+display: grid;
+grid-template-columns: 1fr 1fr;
+grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+
+ grid-column: 1 / span 4;  
+  grid-row: 2 / 3;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+
+.max{
+  grid-column: 1 / 2;
+  grid-row: 1 / 6 ;
+}
+.air{
+   grid-column: 1 / 2;
+  grid-row: 2 / 6 ;
+}
+.static{
+  grid-column: 1 / 2;
+  grid-row: 3 / 6 ;
+}
+.noise{
+  grid-column: 1 / 2;
+  grid-row: 4 / 6 ;
+}
+.power{
+  grid-column: 1 / 2;
+  grid-row: 5 / 6 ;
+}
+.life{
+  grid-column: 1 / 2;
+  grid-row: 6 / 6 ;
+}
+.rpm{
+  grid-column: 2 / 3;
+  grid-row: 1 / 6 ;
+}
+.cfm{
+  grid-column: 2 / 3;
+  grid-row: 2 / 6 ;
+}
+.mm{
+  grid-column: 2 / 3;
+  grid-row: 3 / 6 ;
+}
+.dba{
+  grid-column: 2 / 3;
+  grid-row: 4 / 6 ;
+}
+.W{
+  grid-column: 2 / 3;
+  grid-row: 5 / 6 ;
+}
+.lifesvar{
+  grid-column: 2 / 3;
+  grid-row: 6 / 6 ;
+}
+
+
+
+
 
 @media screen and (min-width: 500px) {
   .main {
@@ -192,7 +286,7 @@ grid-column: 1/ span 4;
     border-style: groove;
 
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: 1fr 1fr ;
 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
     border-radius: 10px;
@@ -225,6 +319,12 @@ justify-content: flex-end;
     font-display: block;
 }
 
+.flakt1{
+
+  grid-column: 1/span 4;
+  grid-row: ;
+}
+
 
 
 
@@ -234,7 +334,34 @@ justify-content: flex-end;
 
 .om-oss{
 
-  grid-column: 1/2;
+  grid-column: 1/  2;
+  grid-row: 2/3 ;
+}
+
+.vd{
+
+    grid-column: 2/3;
+     grid-row: 2/3;
+}
+
+.nya-fläkt{
+ grid-column: 3/4;
+     grid-row: 2/3;
+
+
+}
+
+.flakt1{
+
+grid-column: 2/ span 4;
+ grid-row:3/4
+
+}
+
+.reafläkt{
+
+  grid-row:3/4;
+  grid-column: 1/  2;
 }
 
 }
