--- a/css/style.css
+++ b/css/style.css
@@ -2,23 +2,14 @@
   gap: 1%;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: auto auto auto auto auto auto auto;
-}
-
-
-
-.reafläkt,
-.flakt1 {
-  height: 100%;
-  width: 100%;
+  grid-template-rows: auto auto auto auto auto auto auto auto;
+  font-family: "Roboto", sans-serif;
 }
 
 div {
   padding-left: 5px;
   padding-right: 5px;
 }
-
-
 
 .menu {
   padding: 0;
@@ -46,8 +37,6 @@ div {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
 }
-
-
 
 .vd {
   background-color: bisque;
@@ -102,7 +91,7 @@ div {
 
 .bildbeskrivningrea {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  grid-row:1/2 ;
+  grid-row: 1/2;
   grid-column: 2/3;
 }
 
@@ -119,22 +108,16 @@ div {
   border-radius: 10px;
 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
-  height: 100%;
 }
 
-.beskrivning{
-grid-row: 2/3;
-  grid-column: 1/ span 3;
+.beskrivning {
+  grid-row: 2/3;
+  grid-column: 1 / span 3;
 }
-
 
 .bildbeskrivning p {
-  
-
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-
-
 
 .bild1 {
   grid-column: 1/2;
@@ -142,7 +125,6 @@ grid-row: 2/3;
 }
 
 .nyhetfläkt {
-  
   background-color: rgba(165, 42, 42, 0.733);
   font-weight: bold;
   border-radius: 5px;
@@ -151,90 +133,101 @@ grid-row: 2/3;
 .flakt1 {
   border-radius: 10px;
 
-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: bisque;
   display: grid;
   border-style: groove;
-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
- 
-  
- box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
- 
-  grid-template-columns:  1fr 1fr 1fr 1fr;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
+
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto;
 
-column-gap: 5%;
-margin-bottom: 5%;
-
+  column-gap: 5%;
+  margin-bottom: 5%;
 }
-  .stat{
-
+.stat {
   background-color: rgba(165, 42, 42, 0.384);
-border-style: double;
+  border-style: double;
 
-font-size: large;
-display: grid;
-grid-template-columns: 1fr 1fr;
-grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  font-size: large;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
 
- grid-column: 1 / span 4;  
+  grid-column: 1 / span 4;
   grid-row: 2 / 3;
-box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-
-.max{
+.max {
   grid-column: 1 / 2;
-  grid-row: 1 / 6 ;
+  grid-row: 1 / 6;
 }
-.air{
-   grid-column: 1 / 2;
-  grid-row: 2 / 6 ;
-}
-.static{
+.air {
   grid-column: 1 / 2;
-  grid-row: 3 / 6 ;
+  grid-row: 2 / 6;
 }
-.noise{
+.static {
   grid-column: 1 / 2;
-  grid-row: 4 / 6 ;
+  grid-row: 3 / 6;
 }
-.power{
+.noise {
   grid-column: 1 / 2;
-  grid-row: 5 / 6 ;
+  grid-row: 4 / 6;
 }
-.life{
+.power {
   grid-column: 1 / 2;
-  grid-row: 6 / 6 ;
+  grid-row: 5 / 6;
 }
-.rpm{
-  grid-column: 2 / 3;
-  grid-row: 1 / 6 ;
+.life {
+  grid-column: 1 / 2;
+  grid-row: 6 / 6;
 }
-.cfm{
+.rpm {
   grid-column: 2 / 3;
-  grid-row: 2 / 6 ;
+  grid-row: 1 / 6;
 }
-.mm{
+.cfm {
   grid-column: 2 / 3;
-  grid-row: 3 / 6 ;
+  grid-row: 2 / 6;
 }
-.dba{
+.mm {
   grid-column: 2 / 3;
-  grid-row: 4 / 6 ;
+  grid-row: 3 / 6;
 }
-.W{
+.dba {
   grid-column: 2 / 3;
-  grid-row: 5 / 6 ;
+  grid-row: 4 / 6;
 }
-.lifesvar{
+.W {
   grid-column: 2 / 3;
-  grid-row: 6 / 6 ;
+  grid-row: 5 / 6;
+}
+.lifesvar {
+  grid-column: 2 / 3;
+  grid-row: 6 / 6;
+}
+
+.utdelning{
+display: grid;
+grid-row: 6/7;
+grid-column: 1 / span 2;
+justify-content: center;
 }
 
 
+.footer {
+  margin-top: 25px;
 
-
+  display: grid;
+  grid-row: 7/8;
+  grid-column: 1 / span 2;
+  justify-content: space-evenly;
+  background-color: #808080;
+  align-content: center;
+}
 
 @media screen and (min-width: 500px) {
   .main {
@@ -268,15 +261,14 @@ box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: grid;
     border-style: groove;
 
-    grid-column: 1/ span 4;
+    grid-column: 1 / span 4;
     grid-row: 3/4;
   }
 
-.om-oss{
-
-grid-column: 1/ span 4;
-  grid-row: 2/3;
-}
+  .om-oss {
+    grid-column: 1 / span 4;
+    grid-row: 2/3;
+  }
 
   .reafläkt {
     grid-column: 1/ 2;
@@ -286,82 +278,76 @@ grid-column: 1/ span 4;
     border-style: groove;
 
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr ;
+    grid-template-rows: 1fr 1fr;
 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.7);
     border-radius: 10px;
   }
 
-.header{
+  .header {
+    display: grid;
+    grid-column: 1/2;
+  }
 
-  display: grid;
-  grid-column: 1/2;
-  
-}
+  .menu {
+    display: flex;
 
-.menu{
+    justify-content: flex-end;
+  }
 
-display: flex;
+  .menu-div {
+    display: grid;
 
-justify-content: flex-end;
-
-
-}
-
-.menu-div{
-  display: grid;
- 
-  grid-row: 1/2;
+    grid-row: 1/2;
     grid-column: span 3;
     justify-content: center;
     background-color: gray;
     font-size: larger;
     font-display: block;
+  }
+
+  .flakt1 {
+    grid-column: 1 / span 4;
+    grid-row: ;
+  }
+
+
+  .utdelning{
+
+grid-column: 1 / span 3;
+
 }
 
-.flakt1{
 
-  grid-column: 1/span 4;
-  grid-row: ;
+
+  .footer {
+    grid-column: 1 / span 3;
+  }
 }
 
+@media screen and (min-width: 800px) {
+  .om-oss {
+    grid-column: 1/ 2;
+    grid-row: 2/3;
+  }
 
-
-
-}
-
-@media screen and (min-width: 800px){
-
-.om-oss{
-
-  grid-column: 1/  2;
-  grid-row: 2/3 ;
-}
-
-.vd{
-
+  .vd {
     grid-column: 2/3;
-     grid-row: 2/3;
-}
+    grid-row: 2/3;
+  }
 
-.nya-fläkt{
- grid-column: 3/4;
-     grid-row: 2/3;
+  .nya-fläkt {
+    grid-column: 3/4;
+    grid-row: 2/3;
+  }
 
+  .flakt1 {
+    grid-column: 2 / span 4;
+    grid-row: 3/4;
+  }
 
-}
-
-.flakt1{
-
-grid-column: 2/ span 4;
- grid-row:3/4
-
-}
-
-.reafläkt{
-
-  grid-row:3/4;
-  grid-column: 1/  2;
-}
-
+  .reafläkt {
+    grid-row: 3/4;
+    grid-column: 1/ 2;
+  }
 }
