--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .wrapper {
-  gap: 1%;
+  row-gap: 2%;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto auto auto auto auto auto;
@@ -388,3 +388,55 @@ grid-column: 1 / span 3;
     grid-column:  span 4;
   }
 }
+@media screen and (min-width: 1200px){
+
+ .wrapper{
+
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto auto auto auto;
+ }
+  .om-oss {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
+
+  .vd {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .nya-fläkt {
+    grid-column: 3 / 5;
+    grid-row: 2 / 3;
+  }
+
+  .flakt1 {
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
+  }
+
+  .reafläkt {
+    grid-column: 3 / 5;
+    grid-row: 3 / 4;
+  }
+
+  .plats {
+    grid-column: 1 / 3;
+    grid-row: 3 / ;
+  }
+
+  .varför-oss {
+    grid-column: 1 / 5;
+    grid-row: 4 / 5;
+  }
+
+  .footer {
+    grid-column: 1 / 5;
+    grid-row: 5 / 6;
+  }
+
+  .menu-div {
+    grid-column: 1 / 5;
+  }
+}
+
