--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
+body{
+    background-image: url(/images/ChatGPT\ Image\ 24\ maj\ 2025\ 23_54_29.png);
+}
+
 .wrapper {
   row-gap: 2%;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto auto auto auto auto auto;
   font-family: "Roboto", sans-serif;
+ 
 }
 
 div {
@@ -225,6 +230,7 @@ grid-row: 7/8;
 grid-column: 1 / span 2;
 justify-content: center;
 border-style: solid;
+background-color: aliceblue;
 }
 
 
@@ -315,6 +321,8 @@ border-style: solid;
     background-color: gray;
     font-size: larger;
     font-display: block;
+    border-style: solid;
+    border-radius: 5px;
   }
 
   .flakt1 {
@@ -394,6 +402,9 @@ grid-column: 1 / span 3;
 
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto auto;
+  row-gap: 5%;
+  column-gap: 1%;
+ 
  }
   .om-oss {
     grid-column: 1 / 2;
@@ -401,12 +412,13 @@ grid-column: 1 / span 3;
   }
 
   .vd {
-    grid-column: 2 / 3;
+    grid-column: 4 / 5;
     grid-row: 2 / 3;
+    
   }
 
   .nya-fläkt {
-    grid-column: 3 / 5;
+    grid-column: 3 / 4;
     grid-row: 2 / 3;
   }
 
@@ -416,13 +428,13 @@ grid-column: 1 / span 3;
   }
 
   .reafläkt {
-    grid-column: 3 / 5;
-    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
   }
 
   .plats {
-    grid-column: 1 / 3;
-    grid-row: 3 / ;
+    grid-column: 1 / span 5;
+    grid-row: 3 / 4;
   }
 
   .varför-oss {
