--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,7 @@ grid-column: 1 / span 3;
 
  .wrapper{
 
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto auto auto auto auto auto;
   row-gap: 5%;
   column-gap: 1%;
