--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-body{
-    background-image: url(/images/ChatGPT\ Image\ 24\ maj\ 2025\ 23_54_29.png);
+body {
+  background-image: url(/images/ChatGPT\ Image\ 24\ maj\ 2025\ 23_54_29.png);
 }
 
 .wrapper {
@@ -8,7 +8,6 @@ body{
   grid-template-columns: 1fr;
   grid-template-rows: auto auto auto auto auto auto auto auto;
   font-family: "Roboto", sans-serif;
- 
 }
 
 div {
@@ -16,19 +15,32 @@ div {
   padding-right: 5px;
 }
 
-.menu {
+.menu-div {
   padding: 0;
   list-style-type: none;
- right: -450px;
-  background-color: #222;
+  right: -600px;
+  background-color: rgb(100, 79, 54);
+ 
+  position: fixed;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  border-style: solid;
+  
 }
 
-.menu.active{
+.menu-div ul{
 
-right: 0;
+    list-style: none;
+    font-weight: bold;
 }
 
-
+.menu-div.active {
+  right: 0;
+  background-color: aqua;
+}
 
 .menu-link {
   display: block;
@@ -224,25 +236,21 @@ right: 0;
   grid-row: 6 / 6;
 }
 
-
-.plats{
-
+.plats {
   grid-row: 6/7;
   background-color: bisque;
   border-radius: 5px;
   border-style: solid;
 }
 
-.varför-oss{
-display: grid;
-grid-row: 7/8;
-grid-column: 1 / span 2;
-justify-content: center;
-border-style: solid;
-background-color: aliceblue;
+.varför-oss {
+  display: grid;
+  grid-row: 7/8;
+  grid-column: 1 / span 2;
+  justify-content: center;
+  border-style: solid;
+  background-color: aliceblue;
 }
-
-
 
 .footer {
   margin-top: 25px;
@@ -261,6 +269,26 @@ background-color: aliceblue;
   }
   .menupic {
     display: none;
+  }
+
+  .menu-div{
+
+    
+    grid-row: 1/2;
+    grid-column: 1 / span 4;
+    min-width: 100%;
+    position: unset;
+ 
+  }
+
+
+
+  .menu-div ul{
+display: flex;
+justify-content: space-between;
+flex-direction: row;
+  list-style: none;
+   
   }
 
   .nya-fläkt {
@@ -321,41 +349,22 @@ background-color: aliceblue;
     justify-content: flex-end;
   }
 
-  .menu-div {
-    display: grid;
-
-    grid-row: 1/2;
-    grid-column: span 3;
-    justify-content: center;
-    background-color: gray;
-    font-size: larger;
-    font-display: block;
-    border-style: solid;
-    border-radius: 5px;
-  }
-
+  
   .flakt1 {
     grid-column: 1 / span 4;
     grid-row: ;
   }
 
-  .plats{
-
+  .plats {
     grid-column: span 3;
-
   }
-.plats iframe{
-
- max-width: 100%;
- min-width: 100%;
-}
-  .varför-oss{
-
-grid-column: 1 / span 3;
-
-}
-
-
+  .plats iframe {
+    max-width: 100%;
+    min-width: 100%;
+  }
+  .varför-oss {
+    grid-column: 1 / span 3;
+  }
 
   .footer {
     grid-column: 1 / span 3;
@@ -388,33 +397,27 @@ grid-column: 1 / span 3;
     grid-column: 1/ 2;
   }
 
-.plats{
+  .plats {
+    grid-column: 2 / span 3;
+    grid-row: 3/4;
+  }
 
-  grid-column: 2 / span 3;
-  grid-row: 3/4;
-}
+  .plats iframe {
+    max-width: 100%;
+  }
 
-.plats iframe{
-
- max-width: 100%;
-}
-
-  .varför-oss{
-
+  .varför-oss {
     grid-row: 4/5;
-    grid-column:  span 4;
+    grid-column: span 4;
   }
 }
-@media screen and (min-width: 1200px){
-
- .wrapper{
-
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: auto auto auto auto auto auto;
-  row-gap: 5%;
-  column-gap: 1%;
- 
- }
+@media screen and (min-width: 1200px) {
+  .wrapper {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto auto auto auto;
+    row-gap: 5%;
+    column-gap: 1%;
+  }
   .om-oss {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
@@ -423,7 +426,6 @@ grid-column: 1 / span 3;
   .vd {
     grid-column: 4 / 5;
     grid-row: 2 / 3;
-    
   }
 
   .nya-fläkt {
@@ -460,4 +462,3 @@ grid-column: 1 / span 3;
     grid-column: 1 / 5;
   }
 }
-
